# remotask

./: .coderabbit.yaml  .gitignore  .spec-template.md  ARCHITECTURE.md  ARD.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  OVERHAUL.md  PRD.md  README.md  pyproject.toml
.claude/skills/: spec-pipeline.md
.claude/skills/check-constitution/: SKILL.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/sharpen-spec/: SKILL.md
.claude/skills/validate-spec/: SKILL.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
docs/: ARCHITECTURE.md  ARD.md  PRD.md
docs/templates/: SPEC.md
specs/: 008-task-source-adapters.md
specs/001-cli-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-bootstrap/checklists/: requirements.md
specs/001-cli-bootstrap/contracts/: cli-commands.md  (+2 more)
specs/002-telegram-trigger/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-e2e-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-slash-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dm-channel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-remove-termination-aliases/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-agent-sdk-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/remotask/: __main__.py  cli.py
src/remote_task/: __main__.py  _version.py  cli.py
tests/: conftest.py  sitecustomize.py
tests/fakes/: fake_agent.py  fake_task_source.py  fake_telegram.py  git_repo.py
tests/integration/: test_alias_deprecation.py  test_backwards_compat.py  test_cancel_canonical.py  test_cancel_provider_agnostic.py  test_cli_help.py  test_cli_telegram.py  test_concurrency.py  test_concurrency_stress.py  test_config_command.py  test_daemon_lifecycle.py  test_demo_natural_completion.py  test_dispatcher_with_adapter.py  test_done_command_removed.py  test_init_command.py  test_install_uninstall.py  test_key_prefix.py  test_listener_loop.py  test_operator_stop.py  test_operator_stop_forced.py  test_plain_termination_dead.py  test_projects_command.py  test_restart_recovery.py  test_runtime_end_to_end.py  test_sdk_worker_cooperative_cancel.py  test_sdk_worker_denylist.py  test_sdk_worker_initial_prompt.py  test_sdk_worker_pr_url.py  test_set_my_commands.py  test_setmycommands_curated.py  test_slash_done.py  test_slash_run.py  test_slash_status.py  test_step_event_pipeline.py  test_termination_rejection.py  test_worker_lifecycle.py  test_worker_timeout.py
tests/unit/: test_audit.py  test_commands_registry.py  test_config.py  test_db_migrations.py  test_demo_worker.py  test_dispatcher.py  test_github_issue_adapter.py  test_jira_adapter.py  test_lifecycle.py  test_logging.py  test_macos_launchd.py  test_paths.py  test_projects.py  test_protocol_consistency.py  test_runtime_alias_warned.py  test_runtime_preconditions.py  test_sdk_worker_throttle.py  test_secrets.py  test_sessions_provider_columns.py  test_step_event_parsers.py  test_telegram_parser.py  test_topic_format.py
(+70 files in other folders)
