[project]
name = "remotask"
version = "0.1.0"
description = "Remote agent trigger for Claude Code via Telegram"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Samuel", email = "acid@mission-driven.kr" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tomli-w>=1.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
remotask = "remotask.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remotask"]

[tool.hatch.build.targets.wheel.force-include]
"src/remotask/migrations" = "remotask/migrations"
"src/remotask/templates" = "remotask/templates"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PTH", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/remotask/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "local_only: tests requiring real launchctl (skipped by default)",
]
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["remotask"]
parallel = true
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = false
